added display photos

--- a/category.html
+++ b/category.html
@@ -49,14 +49,13 @@ body {
 }
 
 .card {
-  background-color: #010116a7; /* lacivert ton */
-  color: white; /* metin beyaz olsun ki görünür olsun */
+  background-color: #010116a7; 
+  color: white; 
 }
 
   </style>
 </head>
 <body>
-  <!-- Navbar (anasayfadaki ile aynı) -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
     <a class="navbar-brand d-flex align-items-center" href="#">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/2048px-Steam_icon_logo.svg.png"alt="Steam Logo" style="height:20px; width:auto; margin-right:8px;" alt="Steam Logo" width="30" height="30" class="me-2" />
@@ -85,7 +84,6 @@ body {
     </div>
   </nav>
 
-  <!-- Ana içerik -->
   <div class="container my-5">
     <h2 id="category-title" class="mb-4"></h2>
     <div class="row" id="games-list"></div>
