--- a/help.html
+++ b/help.html
@@ -20,18 +20,17 @@
       padding: 0 15px;
     }
      .accordion-button {
-    background-color: rgb(11, 36, 71); /* lacivert */
+    background-color: rgb(11, 36, 71); 
     color: white;
   }
   .accordion-button:not(.collapsed) {
-    background-color: rgb(8, 26, 52); /* biraz daha koyu lacivert */
+    background-color: rgb(8, 26, 52);
     color: white;
     font-weight: bold;
   }
-  /* Accordion content (cevap kısmı) */
   .accordion-body {
-    background-color: #f1f3f5; /* açık gri */
-    color: #333; /* koyu gri yazı */
+    background-color: #f1f3f5; 
+    color: #333; 
   }
      body {
       background-color: #171a21;
@@ -109,13 +108,11 @@
       </li>
     </ul>
 
-    <!-- Log In & Sign Up buttons -->
     <div class="d-flex">
       <a href="login.html" class="btn btn-outline-light btn-sm me-2">Log In</a>
     </div>
   </div>
 </nav>
-  <!-- Main Content -->
   <div class="content-container">
     <h1 class="mb-4">Help / FAQ</h1>
 
