--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
       </li>
     </ul>
 
-    <!-- Log In & Sign Up buttons -->
     <div class="d-flex">
       <a href="login.html" class="btn btn-outline-light btn-sm me-2">Log In</a>
     </div>
@@ -79,12 +78,10 @@
 
     </div>
 
-    <!-- Sağ Taraf: Carousel -->
     <div class="col-md-9">
       <h2 class="text-center mb-4">Featured Games</h2>
       <div id="gameCarousel" class="carousel slide mx-auto" data-bs-ride="carousel" style="max-width: 800px;">
         <div class="carousel-inner" id="carousel-inner">
-          <!-- JS ile eklenecek -->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#gameCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
@@ -195,20 +192,19 @@ specialOffers.forEach(offer => {
  
   <style>
     .category-link {
-  color: inherit;           /* Yazı rengini olduğu gibi bırak */
-  text-decoration: none;    /* Alt çizgiyi kaldır */
-  display: block;           /* Tüm liste öğesi alanını kapsasın */
+  color: inherit;           
+  text-decoration: none;    
+  display: block;          
 }
 
 .category-link:hover, 
 .category-link:focus {
-  color: inherit;           /* Hover ve focus da renk değiştirmesin */
+  color: inherit;           
   text-decoration: none;
 }
 
-    /* Kart arka planını koyu lacivert yaptım */
     .card {
-      background-color: #010116a7; /* Koyu lacivert */
+      background-color: #010116a7; 
       color: white;
       padding: 30px;
       border-radius: 10px;
@@ -219,7 +215,7 @@ specialOffers.forEach(offer => {
       border: none;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       border-radius: 12px;
-      background-color: #00004d; /* Koyu lacivert */
+      background-color: #00004d; 
       color: white;
     }
 
@@ -243,7 +239,6 @@ specialOffers.forEach(offer => {
       font-size: 18px;
     }
 
-    /* Body ve navbar */
     body {
       background-color: #171a21;
       color: #c6d4df;
@@ -285,7 +280,6 @@ specialOffers.forEach(offer => {
 }
 
 
-    /* Kategoriler için Steam tarzı sade metin görünümü */
     .list-group {
       background: none;
       padding-left: 0;
@@ -293,7 +287,7 @@ specialOffers.forEach(offer => {
     .list-group-item {
       background: none;
       border: none;
-      color: #a0c4ff;  /* Açık lacivert yazı rengi */
+      color: #a0c4ff;  
       padding-left: 0;
       cursor: pointer;
       font-weight: 600;
@@ -304,7 +298,7 @@ specialOffers.forEach(offer => {
       border-radius: 0;
     }
     .list-group-item:hover {
-      color: #ffffff; /* Üstüne gelince beyaz */
+      color: #ffffff; 
       text-decoration: underline;
       background: none;
     }
